<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/computer_dialog_edt_computer_name"
        android:inputType="text|textCapSentences|textAutoCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/computer_dialog_hint_name" />
    
    <EditText
        android:id="@+id/computer_dialog_edt_computer_ip"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/computer_dialog_hint_ip" />
    
    <EditText
        android:id="@+id/computer_dialog_edt_computer_idcode"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/computer_dialog_hint_idcode" />
    
    <CheckBox
        android:id="@+id/computer_dialog_chk_computer_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computer_dialog_type_caption"
        />

</LinearLayout>
